# myinfo-backend

./: pyproject.toml  readme.md  requirements.txt
core/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
libs/myinfo_client/: client.py  security.py  settings.py
libs/validation/: decorators.py
myinfo/: apps.py  entities.py  requests.py  responses.py  service.py  tests.py  views.py
myinfo/tests_data/: access_token_resp.json  client_get_person_response.json  person.json
