[tool.poetry]
name = "ablr-challenge"
version = "0.1.0"
description = "a simple myinfo backend"
authors = ["Nicolas Paris <ni.paris@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
requests = "^2.25.1"
PyJWT = "jwcrypto"
jwcrypto = "^0.9.1"
django-rest-swagger = "^2.2.0"
pydantic = "^1.8.2"
retrying = "^1.3.3"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
